# Generated by Django 5.1.15 on 2026-01-29 14:38

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='AuditPeriod',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('period_name', models.CharField(max_length=200)),
                ('period_type', models.CharField(choices=[('Monthly', 'Monthly'), ('Quarterly', 'Quarterly'), ('Annual', 'Annual')], default='Monthly', max_length=20)),
                ('year', models.IntegerField()),
                ('start_date', models.DateField()),
                ('end_date', models.DateField()),
                ('audit_deadline', models.DateField()),
                ('is_active', models.BooleanField(default=True)),
                ('expected_outside_checks_24_7', models.PositiveIntegerField(default=0)),
                ('expected_inside_checks', models.PositiveIntegerField(default=4)),
                ('notes', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Audit Period',
                'verbose_name_plural': 'Audit Periods',
                'ordering': ['-year', '-start_date'],
            },
        ),
        migrations.CreateModel(
            name='EquipmentCategory',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('category_name', models.CharField(max_length=200)),
                ('sort_order', models.IntegerField(default=0)),
                ('description', models.TextField(blank=True)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Equipment Category',
                'verbose_name_plural': 'Equipment Categories',
                'ordering': ['sort_order'],
            },
        ),
        migrations.CreateModel(
            name='Location',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('department_name', models.CharField(max_length=300)),
                ('display_name', models.CharField(max_length=300)),
                ('building', models.CharField(max_length=200)),
                ('level', models.CharField(max_length=100)),
                ('trolley_type', models.CharField(choices=[('Standard', 'Standard'), ('Paediatric', 'Paediatric'), ('Specialty', 'Specialty')], default='Standard', max_length=30)),
                ('defibrillator_type', models.CharField(choices=[('N/A', 'N/A'), ('LIFEPAK_1000_AED', 'LIFEPAK 1000 AED'), ('LIFEPAK_20_20e', 'LIFEPAK 20/20e')], default='LIFEPAK_1000_AED', max_length=30)),
                ('operating_hours', models.CharField(choices=[('24_7', '24/7'), ('Weekday_Business', 'Weekday Business Hours'), ('Extended', 'Extended Hours')], default='24_7', max_length=30)),
                ('has_paediatric_box', models.BooleanField(default=False)),
                ('has_altered_airway', models.BooleanField(default=False)),
                ('has_specialty_meds', models.BooleanField(default=False)),
                ('last_audit_date', models.DateTimeField(blank=True, null=True)),
                ('last_audit_compliance', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True)),
                ('status', models.CharField(choices=[('Active', 'Active'), ('Inactive', 'Inactive'), ('Decommissioned', 'Decommissioned')], default='Active', max_length=20)),
                ('status_change_date', models.DateTimeField(blank=True, null=True)),
                ('status_change_reason', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Location',
                'verbose_name_plural': 'Locations',
                'ordering': ['department_name'],
            },
        ),
        migrations.CreateModel(
            name='RandomAuditSelection',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('week_start_date', models.DateField()),
                ('week_end_date', models.DateField()),
                ('generated_date', models.DateTimeField(auto_now_add=True)),
                ('generated_by', models.CharField(max_length=200)),
                ('selection_criteria', models.TextField(blank=True)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Random Audit Selection',
                'verbose_name_plural': 'Random Audit Selections',
                'ordering': ['-week_start_date'],
            },
        ),
        migrations.CreateModel(
            name='ServiceLine',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=200)),
                ('abbreviation', models.CharField(max_length=20)),
                ('contact_email', models.EmailField(blank=True, max_length=254)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Service Line',
                'verbose_name_plural': 'Service Lines',
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='Audit',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('audit_type', models.CharField(choices=[('Monthly', 'Monthly'), ('Random', 'Random'), ('FollowUp', 'Follow-Up'), ('Spot', 'Spot Check')], default='Monthly', max_length=20)),
                ('auditor_name', models.CharField(max_length=200)),
                ('started_at', models.DateTimeField(auto_now_add=True)),
                ('completed_at', models.DateTimeField(blank=True, null=True)),
                ('submission_status', models.CharField(choices=[('Draft', 'Draft'), ('InProgress', 'In Progress'), ('Submitted', 'Submitted'), ('Reviewed', 'Reviewed')], default='Draft', max_length=20)),
                ('overall_compliance', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True)),
                ('document_score', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True)),
                ('equipment_score', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True)),
                ('condition_score', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True)),
                ('check_score', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True)),
                ('requires_follow_up', models.BooleanField(default=False)),
                ('follow_up_due_date', models.DateField(blank=True, null=True)),
                ('notes', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('auditor_user', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='audits', to=settings.AUTH_USER_MODEL)),
                ('period', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='audits', to='audit.auditperiod')),
            ],
            options={
                'verbose_name': 'Audit',
                'verbose_name_plural': 'Audits',
                'ordering': ['-started_at'],
            },
        ),
        migrations.CreateModel(
            name='AuditChecks',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('outside_check_count', models.PositiveIntegerField(default=0)),
                ('inside_check_count', models.PositiveIntegerField(default=0)),
                ('expected_outside', models.PositiveIntegerField(default=0)),
                ('expected_inside', models.PositiveIntegerField(default=0)),
                ('count_not_available', models.BooleanField(default=False)),
                ('outside_compliance', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True)),
                ('inside_compliance', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('audit', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='checks', to='audit.audit')),
            ],
            options={
                'verbose_name': 'Audit Checks',
                'verbose_name_plural': 'Audit Checks',
            },
        ),
        migrations.CreateModel(
            name='AuditCondition',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('is_clean', models.BooleanField(default=False)),
                ('is_working_order', models.BooleanField(default=False)),
                ('issue_type', models.CharField(choices=[('None', 'None'), ('Cleanliness', 'Cleanliness'), ('Damage', 'Damage'), ('Missing', 'Missing Component'), ('Other', 'Other')], default='None', max_length=30)),
                ('issue_description', models.TextField(blank=True)),
                ('rubber_bands_used', models.BooleanField(default=False)),
                ('o2_tubing_correct', models.BooleanField(default=False, verbose_name='O2 Tubing Correct')),
                ('inhalo_cylinder_ok', models.BooleanField(default=False, verbose_name='INHALO Cylinder OK')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('audit', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='condition', to='audit.audit')),
            ],
            options={
                'verbose_name': 'Audit Condition',
                'verbose_name_plural': 'Audit Conditions',
            },
        ),
        migrations.CreateModel(
            name='AuditDocuments',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('check_record_status', models.CharField(choices=[('Current', 'Current'), ('Expired', 'Expired'), ('Missing', 'Missing'), ('N/A', 'Not Applicable')], default='Missing', max_length=20)),
                ('check_guidelines_status', models.CharField(choices=[('Current', 'Current'), ('Expired', 'Expired'), ('Missing', 'Missing'), ('N/A', 'Not Applicable')], default='Missing', max_length=20)),
                ('bls_poster_present', models.BooleanField(default=False)),
                ('equipment_list_status', models.CharField(choices=[('Current', 'Current'), ('Expired', 'Expired'), ('Missing', 'Missing'), ('N/A', 'Not Applicable')], default='Missing', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('audit', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='documents', to='audit.audit')),
            ],
            options={
                'verbose_name': 'Audit Documents',
                'verbose_name_plural': 'Audit Documents',
            },
        ),
        migrations.CreateModel(
            name='Equipment',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('item_name', models.CharField(max_length=300)),
                ('short_name', models.CharField(blank=True, max_length=100)),
                ('s4hana_code', models.CharField(blank=True, max_length=50, verbose_name='S/4HANA Code')),
                ('supplier', models.CharField(blank=True, max_length=200)),
                ('standard_quantity', models.PositiveIntegerField(default=1)),
                ('is_standard_item', models.BooleanField(default=True)),
                ('is_paediatric_item', models.BooleanField(default=False)),
                ('is_altered_airway_item', models.BooleanField(default=False)),
                ('required_for_defib_type', models.CharField(choices=[('N/A', 'N/A'), ('LIFEPAK_1000_AED', 'LIFEPAK 1000 AED'), ('LIFEPAK_20_20e', 'LIFEPAK 20/20e')], default='N/A', max_length=30)),
                ('requires_expiry_check', models.BooleanField(default=False)),
                ('critical_item', models.BooleanField(default=False)),
                ('sort_order', models.IntegerField(default=0)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('category', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='equipment', to='audit.equipmentcategory')),
            ],
            options={
                'verbose_name': 'Equipment',
                'verbose_name_plural': 'Equipment',
                'ordering': ['category__sort_order', 'sort_order'],
            },
        ),
        migrations.CreateModel(
            name='Issue',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('issue_number', models.CharField(blank=True, max_length=20, unique=True)),
                ('issue_category', models.CharField(choices=[('Equipment', 'Equipment'), ('Documentation', 'Documentation'), ('Condition', 'Condition'), ('Compliance', 'Compliance'), ('Process', 'Process'), ('Other', 'Other')], max_length=30)),
                ('severity', models.CharField(choices=[('Critical', 'Critical'), ('High', 'High'), ('Medium', 'Medium'), ('Low', 'Low')], default='Medium', max_length=20)),
                ('title', models.CharField(max_length=300)),
                ('description', models.TextField()),
                ('reported_by', models.CharField(max_length=200)),
                ('reported_date', models.DateTimeField(auto_now_add=True)),
                ('assigned_to', models.CharField(blank=True, max_length=200)),
                ('assigned_date', models.DateTimeField(blank=True, null=True)),
                ('target_resolution_date', models.DateField(blank=True, null=True)),
                ('status', models.CharField(choices=[('Open', 'Open'), ('Assigned', 'Assigned'), ('InProgress', 'In Progress'), ('PendingVerification', 'Pending Verification'), ('Resolved', 'Resolved'), ('Closed', 'Closed'), ('Escalated', 'Escalated')], default='Open', max_length=30)),
                ('resolution_summary', models.TextField(blank=True)),
                ('resolved_date', models.DateTimeField(blank=True, null=True)),
                ('verified_by', models.CharField(blank=True, max_length=200)),
                ('closed_date', models.DateTimeField(blank=True, null=True)),
                ('reopen_count', models.PositiveIntegerField(default=0)),
                ('escalation_level', models.PositiveIntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('audit', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='issues', to='audit.audit')),
                ('equipment', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='issues', to='audit.equipment')),
                ('linked_follow_up_audit', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='follow_up_for_issues', to='audit.audit')),
                ('location', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='issues', to='audit.location')),
            ],
            options={
                'verbose_name': 'Issue',
                'verbose_name_plural': 'Issues',
                'ordering': ['-reported_date'],
            },
        ),
        migrations.CreateModel(
            name='CorrectiveAction',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('action_number', models.PositiveIntegerField()),
                ('action_type', models.CharField(choices=[('Replacement', 'Replacement'), ('Repair', 'Repair'), ('Restock', 'Restock'), ('ProcessChange', 'Process Change'), ('Training', 'Training'), ('Other', 'Other')], max_length=30)),
                ('description', models.TextField()),
                ('action_taken_by', models.CharField(max_length=200)),
                ('action_date', models.DateTimeField()),
                ('outcome_description', models.TextField(blank=True)),
                ('outcome_successful', models.BooleanField(default=False)),
                ('evidence_attached', models.BooleanField(default=False)),
                ('evidence_url', models.URLField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('issue', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='corrective_actions', to='audit.issue')),
            ],
            options={
                'verbose_name': 'Corrective Action',
                'verbose_name_plural': 'Corrective Actions',
                'ordering': ['action_number'],
            },
        ),
        migrations.AddField(
            model_name='audit',
            name='triggered_by_issue',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='triggered_audits', to='audit.issue'),
        ),
        migrations.CreateModel(
            name='IssueComment',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('comment_text', models.TextField()),
                ('comment_by', models.CharField(max_length=200)),
                ('comment_date', models.DateTimeField(auto_now_add=True)),
                ('is_internal', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('issue', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='comments', to='audit.issue')),
            ],
            options={
                'verbose_name': 'Issue Comment',
                'verbose_name_plural': 'Issue Comments',
                'ordering': ['comment_date'],
            },
        ),
        migrations.AddField(
            model_name='audit',
            name='location',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='audits', to='audit.location'),
        ),
        migrations.CreateModel(
            name='LocationChangeLog',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('change_type', models.CharField(choices=[('Created', 'Created'), ('Updated', 'Updated'), ('StatusChange', 'Status Change'), ('Decommissioned', 'Decommissioned')], max_length=30)),
                ('field_changed', models.CharField(max_length=100)),
                ('old_value', models.TextField(blank=True)),
                ('new_value', models.TextField(blank=True)),
                ('change_reason', models.TextField(blank=True)),
                ('changed_by', models.CharField(max_length=200)),
                ('changed_date', models.DateTimeField(auto_now_add=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('location', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='change_logs', to='audit.location')),
            ],
            options={
                'verbose_name': 'Location Change Log',
                'verbose_name_plural': 'Location Change Logs',
                'ordering': ['-changed_date'],
            },
        ),
        migrations.AddField(
            model_name='location',
            name='service_line',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='locations', to='audit.serviceline'),
        ),
        migrations.CreateModel(
            name='AuditEquipment',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('is_present', models.BooleanField(default=False)),
                ('quantity_found', models.PositiveIntegerField(default=0)),
                ('quantity_expected', models.PositiveIntegerField(default=0)),
                ('expiry_ok', models.BooleanField(default=True)),
                ('item_notes', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('audit', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='equipment_checks', to='audit.audit')),
                ('equipment', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='audit_checks', to='audit.equipment')),
            ],
            options={
                'verbose_name': 'Audit Equipment Check',
                'verbose_name_plural': 'Audit Equipment Checks',
                'unique_together': {('audit', 'equipment')},
            },
        ),
        migrations.CreateModel(
            name='LocationEquipment',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('is_required', models.BooleanField(default=True)),
                ('custom_quantity', models.PositiveIntegerField(blank=True, null=True)),
                ('notes', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('equipment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='location_overrides', to='audit.equipment')),
                ('location', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='equipment_overrides', to='audit.location')),
            ],
            options={
                'verbose_name': 'Location Equipment Override',
                'verbose_name_plural': 'Location Equipment Overrides',
                'unique_together': {('location', 'equipment')},
            },
        ),
        migrations.CreateModel(
            name='RandomAuditSelectionItem',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('selection_rank', models.PositiveIntegerField()),
                ('priority_score', models.IntegerField(default=0)),
                ('days_since_audit', models.IntegerField(blank=True, null=True)),
                ('audit_status', models.CharField(choices=[('Pending', 'Pending'), ('Completed', 'Completed'), ('Skipped', 'Skipped')], default='Pending', max_length=20)),
                ('skip_reason', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('audit', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='selection_items', to='audit.audit')),
                ('location', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='random_selections', to='audit.location')),
                ('selection', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='items', to='audit.randomauditselection')),
            ],
            options={
                'verbose_name': 'Random Audit Selection Item',
                'verbose_name_plural': 'Random Audit Selection Items',
                'ordering': ['selection_rank'],
                'unique_together': {('selection', 'location')},
            },
        ),
    ]
